--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,11 +7,12 @@ mockk = "1.13.14"
 kotlinter = "5.0.1"
 logging-jvm = "7.0.3"
 slf4j = "1.7.32"
-
+serializationp = "2.1.20-Beta1"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version = "2.0.20" }
 kotlinter = { id = "org.jmailen.kotlinter", version.ref = "kotlinter"}
+serializationp = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serializationp"}
 
 [libraries]
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
